--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         <input name="stacks" placeholder="Stacks" id="stacks">
         <input type="number" name="value" placeholder="Valor R$" id="value">
         <input type="number" name="days" placeholder="Dias úteis" id="days">
-        <input name="developer" placeholder="Desenvolvedores" id="devs">
+        <input type="number" name="developer" placeholder="Desenvolvedores" id="devs">
 
         <button type="submit">Confirmar</button>
     </form>
