--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 
     <div class="container-projects">
         <h1>Projetos</h1>
+        <input type="text" id="filterInput" onkeyup="filter()" placeholder="Procure um projeto..." title="Type in a name">
 
         <table class="table table-borderless table-projects" id="projects">
             <thead>
@@ -71,4 +72,5 @@
 </script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
 <script src="./js/index.js"></script>
+<script src="./js/filter.js"></script>
 </html>
